# ZenEngine

./: .gitignore  .gitmodules  BuildSolution-VS2022.bat  CMakeLists.txt  CMakeShared.cmake  LICENSE  OpenSolution-VS2022.bat  README.md
.github/workflows/: ai_code_review.yml  build-windows.yml  cmake.yml  delete_branch.yml  sync_back.yml  sync_squash_back.yml
CMake/: CMake-Clean-VS2022-x64.bat  CMake-VS2022-x64.bat  CMakeShared.cmake
Development/: CMakeLists.txt
Development/Include/Common/: Common.h
Development/Include/Engine/Engine/: GameEngine.h  IEngineApplication.h
Development/Include/Engine/Engine/Common/: Clock.h  Common.h  CommonDate.h  CommonTime.h  Defines.h  TimeTypes.h  TracingFunctionNames.h
Development/Include/Engine/Engine/Core/: Config.cpp  Config.h  Core.h  GeneralAllocator.h  IAllocator.h  ISystem.h  LinearAllocator.h  Log.h  Memory.h  MemoryConfig.h  PoolAllocator.h  ProfilingMacros.h
Development/Include/Engine/Engine/Debug/: Debug.h  DebugMacros.h
Development/Include/Engine/Engine/EventSystem/: EventManager.h
Development/Include/Engine/Engine/Graphics/: GraphicsManager.h
Development/Include/Engine/Engine/WindowManagement/: WindowManager.h
Development/Include/Game/: Game.h
Development/Internal/: tracy_profiler_client.cmake  tracy_profiler_tool.cmake
Development/Internal/Libraries/TracyProfilerClient/: CMakeLists.txt
Development/Internal/Tools/TracyProfilerTool/: CMakeLists.txt
Development/Programs/TracyProfilerTool/: CMakeLists.txt
Development/Scripts/: NoCopyrightSearch.bat
Development/Source/: CMakeLists.txt  Precompiled.h
Development/Source/Common/: CMakeLists.txt  Precompiled.h
Development/Source/Editor/: CMakeLists.txt
Development/Source/Engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  IEngineApplication.h  Precompiled.h
Development/Source/Engine/Common/: CMakeLists.txt  Clock.cpp  Clock.h  Common.h  CommonDate.cpp  CommonDate.h  CommonDateTime.cpp  CommonDateTime.h  CommonTime.cpp  CommonTime.h  Defines.h  Precompiled.h  TimeTypes.h  TracingFunctionNames.cpp
Development/Source/Engine/Common/Source/: Clock.cpp  CommonDate.cpp  CommonTime.cpp
Development/Source/Engine/Core/: CMakeLists.txt  Config.cpp  Config.h  ISystem.h  LinearAllocator.h  Log.cpp  Log.h
Development/Source/Engine/Core/Source/: Config.cpp  Core.cpp  GeneralAllocator.cpp  Log.cpp  Memory.cpp  PoolAllocator.cpp
Development/Source/Engine/Debug/: CMakeLists.txt  Debug.cpp  Debug.h
Development/Source/Engine/Debug/Source/: Debug.cpp
Development/Source/Engine/EventSystem/: CMakeLists.txt  EventManager.cpp  EventManager.h
Development/Source/Engine/EventSystem/Source/: EventManager.cpp
Development/Source/Engine/Graphics/: CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.h
Development/Source/Engine/Graphics/Source/: GraphicsManager.cpp
Development/Source/Engine/Memory/: CMakeLists.txt  GeneralAllocator.cpp  MemoryConfig.h  PoolAllocator.h
Development/Source/Engine/Renderer/: CMakeLists.txt
Development/Source/Engine/Source/: GameEngine.cpp
Development/Source/Engine/WindowManagement/: CMakeLists.txt  WindowManager.h
Development/Source/Engine/WindowManagement/Source/: WindowManager.cpp
Development/Source/Game/: CMakeLists.txt  Game.cpp  Game.h  GameMain.cpp
Development/Source/Game/Source/: Game.cpp  GameMain.cpp
Development/Source/TracyProfilerClient/: CMakeLists.txt
Editor/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Source/Private/: Engine.cpp
Engine/Source/Public/Core/: ISystem.h
Include/: Precompiled.h
Include/Common/: Clock.h  Common.h  CommonTime.h  Defines.h  Time.h  TimeTypes.h
Include/Core/: ISystem.h
Include/Engine/: GameEngine.h
Source/: CMakeLists.txt  Precompiled.h
Source/Common/: CMakeLists.txt
Source/Common/Source/: CommonTime.cpp
Source/Editor/: CMakeLists.txt
Source/Editor/Source/: Editor.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Common/: CMakeLists.txt
Source/Engine/Common/Source/: Clock.cpp  Time.cpp
Source/Engine/Core/: CMakeLists.txt
Source/Engine/Source/: GameEngine.cpp
Source/Game/: CMakeLists.txt
Source/Game/Source/: Game.cpp
